--- a/src/main.scss
+++ b/src/main.scss
@@ -13,6 +13,11 @@
   padding: .3em;
 }
 
+.search-input-container {
+  padding: 3em;
+  display: inline-block;
+}
+
 .gif-label {
   margin-top: auto;
 }
@@ -23,4 +28,8 @@
 
 .tag-select {
   display: contents;
+}
+
+.search-body {
+  padding-top: 2em;
 }
